--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -13,6 +12,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/backColor" />
+
+    <Button
+        android:id="@+id/scan_wifi_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Scan WiFi"
+        android:layout_gravity="top|center_horizontal"
+        android:layout_marginTop="16dp" />
 
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/nav_view"
