--- a/app/src/main/res/layout/fragment_site.xml
+++ b/app/src/main/res/layout/fragment_site.xml
@@ -7,7 +7,11 @@
         <variable
             name="siteInfo"
             type="com.guhun.locatorapplication07.data.model.UserSiteModel" />
+        <variable
+            name="positionInfo"
+            type="com.guhun.locatorapplication07.data.model.PositionModel" />
     </data>
+
 
     <ScrollView
         android:layout_width="match_parent"
@@ -24,7 +28,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="40dp"
                 android:gravity="center"
-                android:text='@{"当前位置："+(siteInfo.mapName==null?"暂无":siteInfo.mapName),default="当前位置：暂无"}'
+                android:text='@{"当前位置："+(positionInfo.linex+","+positionInfo.liney),default="当前位置：暂无"}'
                 app:layout_constraintTop_toTopOf="parent"
                 tools:layout_editor_absoluteX="0dp" />
 
@@ -33,40 +37,56 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                android:text="定  位"
+                android:text="定位"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
             <ImageView
                 android:id="@+id/imageView"
-                android:layout_width="300dp"
-                android:layout_height="300dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                android:background="@android:drawable/ic_menu_mapmode"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView" />
 
-            <TextView
-                android:id="@+id/textView3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="60dp"
-                android:layout_marginTop="20dp"
-                android:text="详细信息："
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/button" />
+            <View
+                android:id="@+id/markerView"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:visibility="invisible"
+                app:layout_constraintTop_toTopOf="@id/imageView"
+                app:layout_constraintStart_toStartOf="@id/imageView" />
+<!--            <com.example.myapp.CoordinateImageView-->
+<!--                android:id="@+id/imageView"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="match_parent"-->
+<!--                android:src="@drawable/your_image"-->
+<!--                app:maxHorizontal="7"-->
+<!--                app:maxVertical="15" />-->
 
-            <TextView
-                android:id="@+id/textView2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="50dp"
-                android:text='@{""+siteInfo.toString(),default="暂无信息"}'
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/button" />
+
+
+            <!--            <TextView-->
+<!--                android:id="@+id/textView3"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginStart="60dp"-->
+<!--                android:layout_marginTop="20dp"-->
+<!--                android:text="详细信息："-->
+<!--                app:layout_constraintStart_toStartOf="parent"-->
+<!--                app:layout_constraintTop_toBottomOf="@+id/button" />-->
+
+<!--            <TextView-->
+<!--                android:id="@+id/textView2"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginTop="50dp"-->
+<!--                android:text='@{""+siteInfo.toString(),default="暂无信息"}'-->
+<!--                app:layout_constraintEnd_toEndOf="parent"-->
+<!--                app:layout_constraintStart_toStartOf="parent"-->
+<!--                app:layout_constraintTop_toBottomOf="@+id/button" />-->
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 </layout>
