--- a/app/src/main/res/layout/fragment_wifi_institute.xml
+++ b/app/src/main/res/layout/fragment_wifi_institute.xml
@@ -19,7 +19,7 @@
         android:layout_height="match_parent"
         android:background="@color/backColor"
         android:padding="30dp"
-        tools:context=".ui.WifiFragment.WifiFragment">
+        tools:context=".ui.WifiFragment.MapFragment.InstituteMapFragment">
 
 
 
@@ -78,13 +78,6 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
 
-<!--            <Button-->
-<!--                android:id="@+id/button4"-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:text="刷新WIFI数据信息"-->
-<!--                app:layout_constraintEnd_toEndOf="parent"-->
-<!--                app:layout_constraintStart_toStartOf="parent" />-->
 
         </LinearLayout>
 
@@ -187,6 +180,41 @@
                 android:gravity="center"
                 android:text="强度"
                 android:textSize="18sp" />
+
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:id="@+id/linearLayout7"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="300dp"
+            android:orientation="horizontal"
+            app:layout_constraintTop_toBottomOf="@+id/textView4"
+            tools:layout_editor_absoluteX="30dp">
+
+
+            <Button
+                android:id="@+id/button4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="刷新数据信息"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.867"
+                app:layout_constraintStart_toStartOf="parent"
+                tools:layout_editor_absoluteY="358dp" />
+
+            <Button
+                android:id="@+id/button5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="录入数据信息"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                tools:layout_editor_absoluteY="359dp" />
+
+
         </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
@@ -196,6 +224,9 @@
             android:layout_marginTop="4dp"
             app:layout_constraintTop_toBottomOf="@+id/linearLayout6"
             tools:layout_editor_absoluteX="30dp" />
+
+
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
